# dnsmap

./: CONTRIBUTING.md  ChangeLog  Changelog.txt  Makefile.am  NEWS  README  README.md  README.txt  THANKS  TODO  autogen.sh  configure.ac  dnsmap-bulk.sh  dnsmap.c  dnsmap.h  use_cases
.github/workflows/: ccpp.yml  codeql.yml
doc/: UPDATE-CHECK
man/: create-man.sh  dnsmap-bulk.1  dnsmap-bulk.txt  dnsmap.1  dnsmap.txt
src/: Makefile.am  dnsmap-bulk  dnsmap.c  dnsmap.h
